--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 altair==5.1.* 
 altair_data_server==0.4.*
-python==3.11.*
+python==3.11.6
 dash==2.16.* 
 dash-bootstrap-components==1.5.* 
 dash-html-components==2.0.*
