--- a/environment.yaml
+++ b/environment.yaml
@@ -19,7 +19,10 @@ dependencies:
     - dash=2.16.0
     - dash-bootstrap-components=1.5.0
     - plotly=5.0.0
+    - vegafusion=1.6.9
+    - vegafusion-python-embed=1.6.9
     - pip
     - pip:
         - dash-vega-components
         - Flask-Caching==2.1.0
+        - dash-leaflet
