--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dash-bootstrap-components==1.5.*
 dash-html-components==2.0.*
 dash-mantine-components==0.12.*
 dash-vega-components==0.9.*
+dash-loading-spinners==1.0.*
 gunicorn==21.2.*
 matplotlib==3.9.*
 pandas==2.1.* 
