--- a/requirements.txt
+++ b/requirements.txt
@@ -12,5 +12,6 @@ pandas==2.1.*
 plotly==5.0.* 
 vegafusion==1.6.* 
 vegafusion-python-embed==1.6.*
+Flask-Caching==2.1.0
 vl-convert-python==1.3.*
 dash-leaflet[geobuf]==1.0.15
